# etl_project

./: .gitignore  LICENSE.md  MANIFEST.in  Makefile  README.md  main.py  requirements.txt  requirements_dev.txt  requirements_tox.txt  setup.cfg  setup.py  test1.py  tox.ini
.github/workflows/: etl_linting.yml  etl_test.yml  etl_typecheck.yml  etl_workflow.yml
config/: config.yaml
data/: database.db  yt_sample.html
etl/: __init__.py  config.py  config.yaml  example_config.yaml  extract.py  imdb_api.py  load.py  logger.py  main.py  transform.py  youtube_api.py
etl/config/: config.yaml  example_config.yaml
etl/data/: mydb.db  mydb.db-journal  nf_history.csv  yt_history.html
src/etl/: __init__.py  config.py  extract.py  imdb_api.py  load.py  logger.py  main.py  transform.py  youtube_api.py
src/etl/data/: database.db  nf_sample.csv  yt_sample.html
tests/: test_apis.py  test_extract.py  test_load.py  test_transform.py
