[metadata]
name = etl
version = 0.0.1
author = Farhan Mirani
author_email = farhan@mirani.com
description = ETL python project module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmirani/etl_project
project_urls =
    Bug Tracker = https://github.com/fmirani/etl_project/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
package_dir =
    = src
packages = find:
setup_requires =
    setuptools
install_requires =
    python-dotenv
    pandas
    beautifulsoup4
    IMDbPY
    google-api-python-client
test_requires =
    mypy
    pandas
    pytest
    pytest-cov

[options.packages.find]
where = src

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true